{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 984,
  "lineage": "d07d1857-76dc-041f-e4c0-b152a209c819",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/backendAddressPools/imagepool",
                "ip_addresses": [
                  "10.0.1.4"
                ],
                "name": "imagepool"
              },
              {
                "fqdns": [],
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/backendAddressPools/videopool",
                "ip_addresses": [
                  "10.0.1.5"
                ],
                "name": "videopool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/backendHttpSettingsCollection/raoul-HTTPSetting",
                "name": "raoul-HTTPSetting",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/frontendIPConfigurations/raoul-front-end-ip-config",
                "name": "raoul-front-end-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/publicIPAddresses/raoul-gateway-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/frontendPorts/raoul-front-end-port",
                "name": "raoul-front-end-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/gatewayIPConfigurations/raoul-gateway-ip-config",
                "name": "raoul-gateway-ip-config",
                "subnet_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet/subnets/raoul-DMZ"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/frontendIPConfigurations/raoul-front-end-ip-config",
                "frontend_ip_configuration_name": "raoul-front-end-ip-config",
                "frontend_port_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/frontendPorts/raoul-front-end-port",
                "frontend_port_name": "raoul-front-end-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/httpListeners/raoul-gateway-listener",
                "name": "raoul-gateway-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway",
            "identity": [],
            "location": "westeurope",
            "name": "raoul-app-gateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/httpListeners/raoul-gateway-listener",
                "http_listener_name": "raoul-gateway-listener",
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/requestRoutingRules/raoul-RoutingRuleA",
                "name": "raoul-RoutingRuleA",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/urlPathMaps/raoul-RoutingPath",
                "url_path_map_name": "raoul-RoutingPath"
              }
            ],
            "resource_group_name": "raoul-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_Small",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/backendAddressPools/videopool",
                "default_backend_address_pool_name": "videopool",
                "default_backend_http_settings_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/backendHttpSettingsCollection/raoul-HTTPSetting",
                "default_backend_http_settings_name": "raoul-HTTPSetting",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/urlPathMaps/raoul-RoutingPath",
                "name": "raoul-RoutingPath",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/backendAddressPools/videopool",
                    "backend_address_pool_name": "videopool",
                    "backend_http_settings_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/backendHttpSettingsCollection/raoul-HTTPSetting",
                    "backend_http_settings_name": "raoul-HTTPSetting",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/urlPathMaps/raoul-RoutingPath/pathRules/VideoRoutingRule",
                    "name": "VideoRoutingRule",
                    "paths": [
                      "/videos/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  },
                  {
                    "backend_address_pool_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/backendAddressPools/imagepool",
                    "backend_address_pool_name": "imagepool",
                    "backend_http_settings_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/backendHttpSettingsCollection/raoul-HTTPSetting",
                    "backend_http_settings_name": "raoul-HTTPSetting",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/applicationGateways/raoul-app-gateway/urlPathMaps/raoul-RoutingPath/pathRules/ImageRoutingRule",
                    "name": "ImageRoutingRule",
                    "paths": [
                      "/images/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.app_interface1",
            "azurerm_network_interface.app_interface2",
            "azurerm_public_ip.gateway_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.DMZ",
            "azurerm_subnet.LAN",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app_interface1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/networkInterfaces/raoul-app-interface1",
            "internal_domain_name_suffix": "ogtzuexlnkzuzm2abdselzru3h.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet/subnets/raoul-LAN"
              }
            ],
            "location": "westeurope",
            "name": "raoul-app-interface1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "raoul-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.LAN",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app_interface2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/networkInterfaces/raoul-app-interface2",
            "internal_domain_name_suffix": "ogtzuexlnkzuzm2abdselzru3h.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet/subnets/raoul-LAN"
              }
            ],
            "location": "westeurope",
            "name": "raoul-app-interface2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "raoul-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.LAN",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/networkSecurityGroups/raoul-app-nsg",
            "location": "westeurope",
            "name": "raoul-app-nsg",
            "resource_group_name": "raoul-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_HTTP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.DMZ",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "gateway_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/publicIPAddresses/raoul-gateway-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "raoul-gateway-ip",
            "resource_group_name": "raoul-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "DMZ",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet/subnets/raoul-DMZ",
            "name": "raoul-DMZ",
            "resource_group_name": "raoul-rg",
            "virtual_network_name": "raoul-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "LAN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet/subnets/raoul-LAN",
            "name": "raoul-LAN",
            "resource_group_name": "raoul-rg",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "raoul-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Sub-DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "delegation": [
              {
                "name": "DB-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforMySQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet/subnets/raoul-Sub-DB",
            "name": "raoul-Sub-DB",
            "resource_group_name": "raoul-rg",
            "virtual_network_name": "raoul-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet/subnets/raoul-DMZ",
            "network_security_group_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/networkSecurityGroups/raoul-app-nsg",
            "subnet_id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet/subnets/raoul-DMZ"
          },
          "dependencies": [
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.DMZ",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "129aa771-6aeb-4cb3-b380-08e445e634ef",
            "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet",
            "location": "westeurope",
            "name": "raoul-vnet",
            "resource_group_name": "raoul-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet/subnets/raoul-DMZ",
                "name": "raoul-DMZ",
                "security_group": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/networkSecurityGroups/raoul-app-nsg"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet/subnets/raoul-LAN",
                "name": "raoul-LAN"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/1be24ce6-f6e6-419f-9302-bd0497c96987/resourceGroups/raoul-rg/providers/Microsoft.Network/virtualNetworks/raoul-vnet/subnets/raoul-Sub-DB",
                "name": "raoul-Sub-DB"
              }
            ],
            "tags": {
              "Environment": "SchoolProject",
              "Team": "DevOps"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}